JumpScript/tests/baselines/reference/unusedTypeParameterInLambda2.errors.txt
tests/cases/compiler/unusedTypeParameterInLambda2.jump(3,17): error TS6133: 'T' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParameterInLambda2.jump (1 errors) ====
    class A {
        public f1() {
            return <T, X>() => {
                    ~
!!! error TS6133: 'T' is declared but its value is never read.
                var a: X;
                a;
            }
        }
    }